--- a/Arctic/ocean_arctic4.in
+++ b/Arctic/ocean_arctic4.in
@@ -73,7 +73,7 @@
 ! Input variable information file name.  This file needs to be processed
 ! first so all information arrays can be initialized properly.
 
-     VARNAME = /center/w/kate/NEP/External/varinfo.dat
+     VARNAME = /center/w/kate/Arctic2/External/varinfo_jra.dat
 
 ! Number of nested grids.
 
@@ -106,11 +106,11 @@ GridsInLayer =  1
 ! shared-memory configurations used to determine tile horizontal range
 ! indices (Istr,Iend) and (Jstr,Jend), [1:Ngrids].
 
-!      NtileI == 1                               ! I-direction partition
-       NtileI == 8                               ! I-direction partition
+       NtileI == 4                               ! I-direction partition
+!      NtileI == 6                               ! I-direction partition
 ! ORDER MATTERS HERE!
-       NtileJ == 32                              ! J-direction partition
-!      NtileJ == 36                              ! J-direction partition
+!      NtileJ == 32                              ! J-direction partition
+       NtileJ == 24                              ! J-direction partition
 
 ! PIO number of I/O tasks
 
@@ -213,7 +213,7 @@ ad_VolCons(north) ==  F                            ! northern boundary
 
 ! Time-Stepping parameters.
 
-!       NTIMES == 4
+!      NTIMES == 432000
        NTIMES == 86400
           DT == 100.0d0
 !         DT == 80.0d0
@@ -257,8 +257,16 @@ ad_VolCons(north) ==  F                            ! northern boundary
 ! Output history, average, diagnostic files parameters.
 
      LDEFOUT == T
-        NHIS == 72000
-     NDEFHIS == 72000
+!       NHIS == 36000000000000000
+!    NDEFHIS == 36000000000000000
+!       NHIS == 36
+!    NDEFHIS == 36
+!       NHIS == 45
+!    NDEFHIS == 45
+!       NHIS == 60
+!    NDEFHIS == 60
+!       NHIS == 80
+!    NDEFHIS == 80
       NTSAVG == 1
         NAVG == 864
      NDEFAVG == 864
@@ -331,6 +339,7 @@ LtracerSponge == F F                            ! temperature, salinity, inert
 ! Vertical mixing coefficients for tracers in nonlinear model and
 ! basic state scale factor in adjoint-based algorithms: [1:NAT+NPT,Ngrids]
 
+!    AKT_BAK == 2*1.0d-6                        ! m2/s
      AKT_BAK == 8*1.0d-6                        ! m2/s
 
   ad_AKT_fac == 1.0d0  1.0d0                    ! nondimensional
@@ -429,9 +438,12 @@ LtracerSponge == F F                            ! temperature, salinity, inert
 ! origin for tidal forcing, and model reference time for output
 ! NetCDF units attribute.
 
+!      DSTART =  35796.5d0                  ! days (1998)
 !      DSTART =  28856.5d0                  ! days (1979)
 !      DSTART =  32876.5d0                  ! days (1990)
-       DSTART =  37991.5d0                  ! days (2004)
+!      DSTART =  37987.5d0                  ! days (2004)
+!      DSTART =  38351.5d0                  ! days (2005)
+      DSTART =  40446.5d0                  ! days (end Sept 2010)
 !      DSTART =  40907.0d0                  ! days (2012)
   TIDE_START =  -1.0d0                     ! days
     TIME_REF =  19000101.0d0               ! yyyymmdd.dd
@@ -476,14 +488,15 @@ LtracerSponge == F F                            ! temperature, salinity, inert
 ! point Sources/Sinks (like river runoff transport) and mass point
 ! Sources/Sinks (like volume vertical influx), [1:Ngrids].
 
-      LuvSrc == T                          ! horizontal momentum transport
+      LuvSrc == F                          ! horizontal momentum transport
        LwSrc == F                          ! volume vertical influx
 
 ! Logical switches (TRUE/FALSE) to activate tracers point Sources/Sinks
 ! (like river runoff) and to specify which tracer variables to consider:
 ! [1:NAT+NPT,Ngrids].  See glossary below for details.
 
-  LtracerSrc == T T F F F F F F            ! temperature, salinity, inert
+  LtracerSrc == F F F F F F F F            ! temperature, salinity, inert
+!  LtracerSrc == T T                        ! temperature, salinity, inert
 
 ! Logical switches (TRUE/FALSE) to read and process climatology fields.
 ! See glossary below for details.
@@ -493,6 +506,7 @@ LtracerSponge == F F                            ! temperature, salinity, inert
       Lm3CLM == T                          ! 3D momentum
 
   LtracerCLM == T T F F F F F F            ! temperature, salinity, inert
+!  LtracerCLM == T T                        ! temperature, salinity, inert
 
 ! Logical switches (TRUE/FALSE) to nudge the desired climatology field(s).
 ! If not analytical climatology fields, users need to turn ON the logical
@@ -573,18 +587,18 @@ SO_sdev(isTsur) == 1.0d0 1.0d0             ! NT surface tracers flux
 ! Logical switches (TRUE/FALSE) to activate writing of fields into
 ! HISTORY output file.
 
-Hout(idUvel) == T       ! u                  3D U-velocity
-Hout(idVvel) == T       ! v                  3D V-velocity
-Hout(idu3dE) == F       ! u_eastward         3D U-eastward  at RHO-points
-Hout(idv3dN) == F       ! v_northward        3D V-northward at RHO-points
-Hout(idWvel) == T       ! w                  3D W-velocity
-Hout(idOvel) == T       ! omega              omega vertical velocity
-Hout(idUbar) == T       ! ubar               2D U-velocity
-Hout(idVbar) == T       ! vbar               2D V-velocity
-Hout(idu2dE) == F       ! ubar_eastward      2D U-eastward  at RHO-points
-Hout(idv2dN) == F       ! vbar_northward     2D V-northward at RHO-points
+Hout(idUvel) == F       ! u                  3D U-velocity
+Hout(idVvel) == F       ! v                  3D V-velocity
+Hout(idu3dE) == T       ! u_eastward         3D U-eastward  at RHO-points
+Hout(idv3dN) == T       ! v_northward        3D V-northward at RHO-points
+Hout(idWvel) == F       ! w                  3D W-velocity
+Hout(idOvel) == F       ! omega              omega vertical velocity
+Hout(idUbar) == F       ! ubar               2D U-velocity
+Hout(idVbar) == F       ! vbar               2D V-velocity
+Hout(idu2dE) == T       ! ubar_eastward      2D U-eastward  at RHO-points
+Hout(idv2dN) == T       ! vbar_northward     2D V-northward at RHO-points
 Hout(idFsur) == T       ! zeta               free-surface
-Hout(idBath) == T       ! bath               time-dependent bathymetry
+Hout(idBath) == F       ! bath               time-dependent bathymetry
 
 Hout(idTvar) == T T     ! temp, salt         temperature and salinity
 
@@ -653,11 +667,11 @@ Hout(idEmPf) == T       ! EminusP            E-P flux
 Hout(idevap) == T       ! evaporation        evaporation rate
 Hout(idrain) == T       ! rain               precipitation rate
 
-Hout(idDano) == T       ! rho                density anomaly
-Hout(idVvis) == T       ! AKv                vertical viscosity
+Hout(idDano) == F       ! rho                density anomaly
+Hout(idVvis) == F       ! AKv                vertical viscosity
 Hout(idTdif) == F       ! AKt                vertical T-diffusion
 Hout(idSdif) == F       ! AKs                vertical Salinity diffusion
-Hout(idHsbl) == T       ! Hsbl               depth of surface boundary layer
+Hout(idHsbl) == F       ! Hsbl               depth of surface boundary layer
 Hout(idHbbl) == F       ! Hbbl               depth of bottom boundary layer
 Hout(idMtke) == F       ! tke                turbulent kinetic energy
 Hout(idMtls) == F       ! gls                turbulent length scale
@@ -669,7 +683,7 @@ Hout(idMtls) == F       ! gls                turbulent length scale
 ! NPT values are expected. However, these switches can be activated using
 ! compact parameter specification.
 
- Hout(inert) == T T T T T T                      ! inert passive tracers
+ Hout(inert) == F F F F F F                      ! inert passive tracers
 
 ! Logical switches (TRUE/FALSE) to activate writing of fields into
 ! surface output file.
@@ -742,7 +756,6 @@ Aout2(idEmPf) == F       ! EminusP            E-P flux
 Aout2(idevap) == F       ! evaporation        evaporation rate
 Aout2(idrain) == F       ! rain               precipitation rate
 
-
 ! Logical switches (TRUE/FALSE) to activate writing of extra inert passive
 ! tracers other than biological and sediment tracers. An inert passive tracer
 ! is one that it is only advected and diffused. Other processes are ignored.
@@ -809,7 +822,7 @@ Aout(idrain) == T       ! rain               precipitation rate
 
 Aout(idDano) == T       ! rho                density anomaly
 Aout(idVvis) == F       ! AKv                vertical viscosity
-Aout(idTdif) == T       ! AKt                vertical T-diffusion
+Aout(idTdif) == F       ! AKt                vertical T-diffusion
 Aout(idSdif) == F       ! AKs                vertical Salinity diffusion
 Aout(idHsbl) == T       ! Hsbl               depth of surface boundary layer
 Aout(idHbbl) == F       ! Hbbl               depth of bottom boundary layer
@@ -911,10 +924,9 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 
 ! Input NetCDF file names, [1:Ngrids].
 
-     GRDNAME == /center/w/kate/Arctic2/Files/grid_Arctic_2.nc
-!     ININAME == /center/w/kate/Arctic2/Files/SODA_2.1.6_19790101-19790106_ic_ARCTIC2.nc
-     ININAME == /center/w/kate/Arctic2/Files/SODA_2.1.6_20031231-20040105_ic_ARCTIC2.nc
-!     ININAME == arctic2_rst.nc
+     GRDNAME == /center/w/kate/Arctic2/Files/grid_Arctic_4.nc
+     ININAME == /center/w/kate/Arctic2/Files/ARCTIC4_IC_2010_09_27_SODA3.3.1.nc
+!    ININAME == arctic4_rst.nc
      ITLNAME == ocean_itl.nc
      IRPNAME == ocean_irp.nc
      IADNAME == ocean_iad.nc
@@ -934,16 +946,12 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 ! except the last one.
 
    NCLMFILES == 1                         ! number of climate files
-     CLMNAME == /center/w/kate/Arctic2/Files/Arctic2_clim_2003.nc |
-                /center/w/kate/Arctic2/Files/Arctic2_clim_2004.nc
-!     CLMNAME == /center/w/kate/Arctic2/Files/Arctic2_clim_1979.nc |
-!                /center/w/kate/Arctic2/Files/Arctic2_clim_1980.nc
+     CLMNAME == /center/w/kate/Arctic2/Files/Arctic4_clm_2010_SODA3.3.1.nc |
+                /center/w/kate/Arctic2/Files/Arctic4_clm_2011_SODA3.3.1.nc
 
     NBCFILES == 1                          ! number of boundary files
-     BRYNAME == /center/w/kate/Arctic2/Files/Arctic2_bdry_2004.nc |
-                /center/w/kate/Arctic2/Files/Arctic2_bdry_2005.nc
-!     BRYNAME == /center/w/kate/Arctic2/Files/Arctic2_bdry_1979.nc |
-!                /center/w/kate/Arctic2/Files/Arctic2_bdry_1980.nc
+     BRYNAME == /center/w/kate/Arctic2/Files/Arctic4_bdry_2010_SODA3.3.1.nc |
+                /center/w/kate/Arctic2/Files/Arctic4_bdry_2011_SODA3.3.1.nc
 
 ! Input climatology nudging coefficients file name.
 
@@ -963,70 +971,47 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 ! and so on.  Use a single line per entry with a continuation (\) symbol
 ! at the each entry, except the last one.
 
+    NFFILES == 12                          ! number of forcing files
 
-    NFFILES == 13                          ! number of forcing files
-
-    FRCNAME == /center/d/kate/MERRA_drowned/drowned_MERRA_Pair_3hours_2004.nc   |
-               /center/d/kate/MERRA_drowned/drowned_MERRA_Pair_3hours_2005.nc \
-               /center/d/kate/MERRA_drowned/drowned_MERRA_Qair_3hours_2004.nc |
-               /center/d/kate/MERRA_drowned/drowned_MERRA_Qair_3hours_2005.nc \
-               /center/d/kate/MERRA_drowned/drowned_MERRA_Tair_3hours_2004.nc |
-               /center/d/kate/MERRA_drowned/drowned_MERRA_Tair_3hours_2005.nc \
-               /center/d/kate/MERRA_drowned/drowned_MERRA_rain_3hours_2004.nc |
-               /center/d/kate/MERRA_drowned/drowned_MERRA_rain_3hours_2005.nc \
-               /center/d/kate/MERRA_drowned/drowned_MERRA_snow_3hours_2004.nc |
-               /center/d/kate/MERRA_drowned/drowned_MERRA_snow_3hours_2005.nc \
-               /center/d/kate/MERRA_drowned/drowned_MERRA_swrad_3hours_2004.nc |
-               /center/d/kate/MERRA_drowned/drowned_MERRA_swrad_3hours_2005.nc \
-               /center/d/kate/MERRA_drowned/drowned_MERRA_Uwind_3hours_2004.nc |
-               /center/d/kate/MERRA_drowned/drowned_MERRA_Uwind_3hours_2005.nc \
-               /center/d/kate/MERRA_drowned/drowned_MERRA_Vwind_3hours_2004.nc |
-               /center/d/kate/MERRA_drowned/drowned_MERRA_Vwind_3hours_2005.nc \
-               /center/d/kate/MERRA_drowned/drowned_MERRA_lwrad_down_3hours_2004.nc |
-               /center/d/kate/MERRA_drowned/drowned_MERRA_lwrad_down_3hours_2005.nc \
+    FRCNAME == /center/d/kate/JRA55-raw/slp.2010.30Jun2016.nc   |
+               /center/d/kate/JRA55-raw/slp.2011.30Jun2016.nc   \
+               /center/d/kate/JRA55-raw/q_10.2010.30Jun2016.nc   |
+               /center/d/kate/JRA55-raw/q_10.2011.30Jun2016.nc   \
+               /center/d/kate/JRA55-raw/t_10.2010.30Jun2016.nc   |
+               /center/d/kate/JRA55-raw/t_10.2011.30Jun2016.nc   \
+               /center/d/kate/JRA55-raw/rain.2010.15Dec2016.nc   |
+               /center/d/kate/JRA55-raw/rain.2011.15Dec2016.nc   \
+               /center/d/kate/JRA55-raw/snow.2010.15Dec2016.nc   |
+               /center/d/kate/JRA55-raw/snow.2011.15Dec2016.nc   \
+               /center/d/kate/JRA55-raw/rsds.2010.30Jun2016.nc  |
+               /center/d/kate/JRA55-raw/rsds.2011.30Jun2016.nc  \
+               /center/d/kate/JRA55-raw/rlds.2010.30Jun2016.nc  |
+               /center/d/kate/JRA55-raw/rlds.2011.30Jun2016.nc  \
+               /center/d/kate/JRA55-raw/u_10.2010.30Jun2016.nc  |
+               /center/d/kate/JRA55-raw/u_10.2011.30Jun2016.nc  \
+               /center/d/kate/JRA55-raw/v_10.2010.30Jun2016.nc  |
+               /center/d/kate/JRA55-raw/v_10.2011.30Jun2016.nc  \
+               /center/d/kate/JRA55-raw/runoff_all.2010.15Dec2016.nc   |
+               /center/d/kate/JRA55-raw/runoff_all.2011.15Dec2016.nc   \
                /center/w/kate/CORE2/sss_fill_2004.nc \
-               /center/w/kate/Arctic2/Files/runoff_ARCTIC2_daitren_inter_annual_1948-2007.nc \
-               /center/w/kate/Arctic2/Files/fastice_Arctic2.nc \
                /center/w/kate/Arctic2/Files/Arctic2_tides_otps.nc
 
-!    FRCNAME == /center/d/kate/MERRA_drowned/drowned_MERRA_Pair_3hours_1979.nc   |
-!               /center/d/kate/MERRA_drowned/drowned_MERRA_Pair_3hours_1980.nc   \
-!               /center/d/kate/MERRA_drowned/drowned_MERRA_Qair_3hours_1979.nc   |
-!               /center/d/kate/MERRA_drowned/drowned_MERRA_Qair_3hours_1980.nc   \
-!               /center/d/kate/MERRA_drowned/drowned_MERRA_Tair_3hours_1979.nc   |
-!               /center/d/kate/MERRA_drowned/drowned_MERRA_Tair_3hours_1980.nc   \
-!               /center/d/kate/MERRA_drowned/drowned_MERRA_rain_3hours_1979.nc   |
-!               /center/d/kate/MERRA_drowned/drowned_MERRA_rain_3hours_1980.nc   \
-!               /center/d/kate/MERRA_drowned/drowned_MERRA_snow_3hours_1979.nc   |
-!               /center/d/kate/MERRA_drowned/drowned_MERRA_snow_3hours_1980.nc   \
-!               /center/d/kate/MERRA_drowned/drowned_MERRA_swrad_3hours_1979.nc  |
-!               /center/d/kate/MERRA_drowned/drowned_MERRA_swrad_3hours_1980.nc  \
-!               /center/d/kate/MERRA_drowned/drowned_MERRA_Uwind_3hours_1979.nc  |
-!               /center/d/kate/MERRA_drowned/drowned_MERRA_Uwind_3hours_1980.nc  \
-!               /center/d/kate/MERRA_drowned/drowned_MERRA_Vwind_3hours_1979.nc  |
-!               /center/d/kate/MERRA_drowned/drowned_MERRA_Vwind_3hours_1980.nc  \
-!               /center/d/kate/MERRA_drowned/drowned_MERRA_lwrad_down_3hours_1979.nc  |
-!               /center/d/kate/MERRA_drowned/drowned_MERRA_lwrad_down_3hours_1980.nc  \
-!               /center/w/kate/CORE2/sss_fill_2004.nc \
-!               /center/w/kate/Arctic2/Files/runoff_ARCTIC2_daitren_inter_annual_1948-2007.nc \
-!               /center/w/kate/Arctic2/Files/fastice_Arctic2.nc \
-!               /center/w/kate/Arctic2/Files/Arctic2_tides_otps.nc
-
-!               /center/w/kate/Arctic2/Files/runoff_ARCTIC2_daitren_clim.nc \
+!               /center/w/kate/Arctic2/Files/runoff_ARCTIC2_daitren_southern_1978-2007.nc \
 ! Output NetCDF file names, [1:Ngrids].
 
-     DAINAME == ocean_dai.nc
+     DAINAME == arctic4_dai.nc
      GSTNAME == ocean_gst.nc
-     RSTNAME == arctic2_rst.nc
-     HISNAME == arctic2_his.nc
-     TLMNAME == arctic2_tlm.nc
-     TLFNAME == arctic2_tlf.nc
-     ADJNAME == arctic2_tlm.nc
-     AVGNAME == arctic2_avg.nc
-    AVG2NAME == arctic2_avg2.nc
-     DIANAME == arctic2_dia.nc
-     STANAME == arctic2_sta.nc
-     FLTNAME == arctic2_flt.nc
+     RSTNAME == arctic4_rst.nc
+     HISNAME == arctic4_his.nc
+     QCKNAME == arctic4_qck.nc
+     TLMNAME == arctic4_tlm.nc
+     TLFNAME == arctic4_tlf.nc
+     ADJNAME == arctic4_tlm.nc
+     AVGNAME == arctic4_avg.nc
+    AVG2NAME == arctic4_avg2.nc
+     DIANAME == arctic4_dia.nc
+     STANAME == arctic4_sta.nc
+     FLTNAME == arctic4_flt.nc
 
 ! Input ASCII parameter filenames.
 
@@ -2214,18 +2199,6 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 !                 TCLM_NUDGING is now obsolete and replaced with these
 !                 switches to facilitate nesting applications.
 !
-!                 Only NAT active tracers (temperature, salinity) and NPT
-!                 inert tracers need to be specified here:
-!
-!                   LnudgeTCLM(itemp,ng)     for temperature (itemp=1)
-!                   LnudgeTCLM(isalt,ng)     for salinity    (isalt=2)
-!                   LnudgeTCLM(NAT+1,ng)     for inert tracer 1
-!                   ...                      ...
-!                   LnudgeTCLM(NAT+NPT,ng)   for inert tracer NPT
-!
-!                 Other biological and sediment tracers switches are specified
-!                 in their respective input scripts.
-!
 !                 User also needs to TURN ON the respective logical switches
 !                 "LtracerCLM", described above, to process the required 3D
 !                 tracer climatology data. This data can be set with analytical
@@ -2323,11 +2296,6 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 !
 ! Hout(idTvar)   Write out active (NAT) tracers: temperature and salinity.
 !
-! Hout(idpthR)   Write out time-varying depths of RHO-points.
-! Hout(idpthU)   Write out time-varying depths of U-points.
-! Hout(idpthV)   Write out time-varying depths of V-points.
-! Hout(idpthW)   Write out time-varying depths of W-points.
-!
 ! Hout(idUsms)   Write out surface U-momentum stress.
 ! Hout(idVsms)   Write out surface V-momentum stress.
 ! Hout(idUbms)   Write out bottom  U-momentum stress.
@@ -2394,6 +2362,8 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 ! Hout(idMtls)   Write out turbulent kinetic energy times length scale.
 !
 ! Hout(inert)    Write out extra inert passive tracers.
+!
+! Hout(idBott)   Write out exposed sediment layer properties, 1:MBOTP.
 !
 !------------------------------------------------------------------------------
 ! Logical switches (T/F) to activate writing of time-averaged fields into
@@ -2712,8 +2682,6 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 !
 ! Output file names:
 !
-! DAINAME      Output data assimilation next cycle initial conditions (4D-Var
-!                analysis) or restart (Ensemble Kalman Filter, EnKF) file name.
 ! GSTNAME      Output GST analysis re-start file name.
 ! RSTNAME      Output re-start file name.
 ! HISNAME      Output history file name.
