--- a/Chukchi/ocean_chukchi.in
+++ b/Chukchi/ocean_chukchi.in
@@ -1020,8 +1020,8 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 
     NFFILES == 15                          ! number of unique forcing files
 
-    FRCNAME == /center1/d/kate/JRA55-do/slp.2011.30Jun2016.nc   |
-               /center1/d/kate/JRA55-do/slp.2012.30Jun2016.nc   \
+    FRCNAME == /center1/d/kate/JRA55-do/slp.2011.18Aug2017.nc   |
+               /center1/d/kate/JRA55-do/slp.2012.18Aug2017.nc   \
               /center1/d/kate/JRA55-do/q_10.2011.30Jun2016.nc   |
               /center1/d/kate/JRA55-do/q_10.2012.30Jun2016.nc   \
               /center1/d/kate/JRA55-do/t_10.2011.30Jun2016.nc   |
@@ -1966,7 +1966,19 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 !                      0 <  theta_s <= 10.0
 !                      0 <= theta_b <=  4.0
 !
-!              Many other stretching functions (Vstretching>4) are possible
+!                 (5) Souza et al. (2015) quadratic Legendre polynomial function
+!                     that allows higher resolution near the surface,
+!                     Vstretching=5. It is similar to Vstretching=4, but the
+!                     fractional stretched vertical coordinate (s) is re-defined
+!                     as:
+!
+!                       s(k)=- [(k*k - 2*k*N + k + N*N - N) / (N*N - N)]
+!                            - weight * [(k*k - k*N) / (1 - N)]
+!
+!                     at vertical W-points, k=0,...,N and weight=0.01. To get
+!                     the equation at vertical RHO-points, replace k with k-0.5.
+!
+!              Many other stretching functions (Vstretching>5) are possible
 !              provided that:
 !
 !                * C(s) is a dimensionless, nonlinear, monotonic function.
