--- a/Beaufort/ocean_beaufort2.in
+++ b/Beaufort/ocean_beaufort2.in
@@ -994,6 +994,7 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 
 ! Input Sources/Sinks forcing (like river runoff) file name.
 
+     NSSFFILES == 1
      SSFNAME == /center/w/kate/Beaufort/Files/Beaufort2_rivers.nc
 
 ! Input tidal forcing file name.
