--- a/Arctic/ocean_arctic.in
+++ b/Arctic/ocean_arctic.in
@@ -1019,6 +1019,7 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 
 ! Input Sources/Sinks forcing (like river runoff) file name.
 
+     NSSFFILES == 1
      SSFNAME == /center/w/kate/Arctic2/Files/Arctic2_rivers.nc
 
 ! Input tidal forcing file name.
