--- a/NWA/ocean_NWA.in
+++ b/NWA/ocean_NWA.in
@@ -960,6 +960,7 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 
 ! Input Sources/Sinks forcing (like river runoff) file name.
 
+     NSSFFILES == 1
      SSFNAME == ocean_rivers.nc
 
 ! Input tidal forcing file name.
