New Arctic run files.

--- a/Arctic/ice.in
+++ b/Arctic/ice.in
@@ -167,45 +167,45 @@ Hout(idUiceE) == F
 Hout(idViceN) == F
 Hout(idAice) == T
 Hout(idHice) == T
-Hout(idTice) == T
+Hout(idTice) == F
 Hout(idHsno) == T
-Hout(idTimid) == T
-Hout(idT2ice) == T
-Hout(idApond) == T
-Hout(idHpond) == T
+Hout(idTimid) == F
+Hout(idT2ice) == F
+Hout(idApond) == F
+Hout(idHpond) == F
 Hout(idTauiw) == F
 Hout(idChuiw) == F
-Hout(idAgeice) == T
-Hout(idSig11) == T
-Hout(idSig12) == T
-Hout(idSig22) == T
-Hout(idS0mk) == T
-Hout(idT0mk) == T
-Hout(idWfr) == T
-Hout(idWai) == T
-Hout(idWao) == T
-Hout(idWio) == T
-Hout(idWro) == T
-Hout(idWdiv) == T
-Hout(idIomflx) == T
+Hout(idAgeice) == F
+Hout(idSig11) == F
+Hout(idSig12) == F
+Hout(idSig22) == F
+Hout(idS0mk) == F
+Hout(idT0mk) == F
+Hout(idWfr) == F
+Hout(idWai) == F
+Hout(idWao) == F
+Hout(idWio) == F
+Hout(idWro) == F
+Hout(idWdiv) == F
+Hout(idIomflx) == F
 
-Hout(idAlbe) == T
-Hout(idAlbI) == T
-Hout(idLWdn) == T
-Hout(idSWdn) == T
-Hout(idLatI) == T
-Hout(idSenI) == T
-Hout(idLWupI) == T
-Hout(idSWupI) == T
-Hout(idSWinI) == T
-Hout(idSWthruI) == T
-Hout(idSaltI) == T
-Hout(idSaltL) == T
-Hout(idQao) == T
-Hout(idQai) == T
-Hout(idQio) == T
-Hout(idQi2) == T
-Hout(idSnoI) == T
+Hout(idAlbe) == F
+Hout(idAlbI) == F
+Hout(idLWdn) == F
+Hout(idSWdn) == F
+Hout(idLatI) == F
+Hout(idSenI) == F
+Hout(idLWupI) == F
+Hout(idSWupI) == F
+Hout(idSWinI) == F
+Hout(idSWthruI) == F
+Hout(idSaltI) == F
+Hout(idSaltL) == F
+Hout(idQao) == F
+Hout(idQai) == F
+Hout(idQio) == F
+Hout(idQi2) == F
+Hout(idSnoI) == F
 
 ! Logical switches (TRUE/FALSE) to activate writing of ice prognostic
 ! variables into AVERAGES output file.
@@ -276,6 +276,30 @@ Aout2(idSig12) == T
 Aout2(idSig22) == T
 Aout2(idS0mk) == F
 Aout2(idT0mk) == F
+Aout2(idWfr) == F
+Aout2(idWai) == F
+Aout2(idWao) == F
+Aout2(idWio) == F
+Aout2(idWro) == F
+Aout2(idWdiv) == F
+
+Aout2(idAlbe) == F
+Aout2(idAlbI) == F
+Aout2(idLWdn) == F
+Aout2(idSWdn) == F
+Aout2(idLatI) == F
+Aout2(idSenI) == F
+Aout2(idLWupI) == F
+Aout2(idSWupI) == F
+Aout2(idSWinI) == F
+Aout2(idSWthruI) == F
+Aout2(idSaltI) == F
+Aout2(idSaltL) == F
+Aout2(idQao) == F
+Aout2(idQai) == F
+Aout2(idQio) == F
+Aout2(idQi2) == F
+Aout2(idSnoI) == F
 
 ! Logical switches (TRUE/FALSE) to activate writing of ice prognostic
 ! variables into HISTORY output file.
