--- a/Arctic/ocean_arctic4.in
+++ b/Arctic/ocean_arctic4.in
@@ -213,12 +213,11 @@ ad_VolCons(north) ==  F                            ! northern boundary
 
 ! Time-Stepping parameters.
 
-!      NTIMES == 432000
-       NTIMES == 86400
-          DT == 100.0d0
-!         DT == 80.0d0
-!         DT == 75.0d0
-!         DT == 60.0d0
+!      NTIMES == 216000
+       NTIMES == 345600
+!      NTIMES == 388800
+!         DT == 100.0d0
+          DT == 80.0d0
      NDTFAST == 20
 
 ! Model iteration loops parameters.
@@ -240,18 +239,12 @@ ad_VolCons(north) ==  F                            ! northern boundary
 
        NRREC == 0
    LcycleRST == T
-        NRST == 4320
-        NSTA == 36
-        NFLT == 36
-!       NRST == 5400
-!       NSTA == 45
-!       NFLT == 45
-!       NRST == 11520
-!       NSTA == 48
-!       NFLT == 48
-!       NRST == 14400
-!       NSTA == 60
-!       NFLT == 60
+!       NRST == 4320
+!       NSTA == 36
+!       NFLT == 36
+        NRST == 5400
+        NSTA == 45
+        NFLT == 45
        NINFO == 1
 
 ! Output history, average, diagnostic files parameters.
@@ -263,30 +256,18 @@ ad_VolCons(north) ==  F                            ! northern boundary
 !    NDEFHIS == 36
 !       NHIS == 45
 !    NDEFHIS == 45
-!       NHIS == 60
-!    NDEFHIS == 60
-!       NHIS == 80
-!    NDEFHIS == 80
       NTSAVG == 1
-        NAVG == 864
-     NDEFAVG == 864
-!       NAVG == 1080
-!    NDEFAVG == 1080
-!       NAVG == 1152
-!    NDEFAVG == 1152
-!       NAVG == 1440
-!    NDEFAVG == 1440
+!       NAVG == 864
+!    NDEFAVG == 864
+        NAVG == 1080
+     NDEFAVG == 1080
      NTSAVG2 == 1
-       NAVG2 == 3600000
-    NDEFAVG2 == 8640000
-!      NAVG2 == 45
-!   NDEFAVG2 == 1080
-!      NAVG2 == 48
-!   NDEFAVG2 == 1152
-!      NAVG2 == 60
-!   NDEFAVG2 == 1440
-      NTSDIA == 1
-        NDIA == 10
+!      NAVG2 == 108
+!   NDEFAVG2 == 864
+       NAVG2 == 135
+    NDEFAVG2 == 1080
+      NTSDIA == 864
+        NDIA == 864
      NDEFDIA == 0
 
 ! Output tangent linear and adjoint models parameters.
@@ -449,13 +430,12 @@ LtracerSponge == F F                            ! temperature, salinity, inert
 ! origin for tidal forcing, and model reference time for output
 ! NetCDF units attribute.
 
-!      DSTART =  35796.5d0                  ! days (1998)
-!      DSTART =  28856.5d0                  ! days (1979)
-!      DSTART =  32876.5d0                  ! days (1990)
-!      DSTART =  37987.5d0                  ! days (2004)
-!      DSTART =  38351.5d0                  ! days (2005)
-      DSTART =  40446.5d0                  ! days (end Sept 2010)
-!      DSTART =  40907.0d0                  ! days (2012)
+      DSTART =  29226.5d0                  ! days (1980)
+!     DSTART =  32876.5d0                  ! days (1990)
+!     DSTART =  37987.5d0                  ! days (2004)
+!     DSTART =  38351.5d0                  ! days (2005)
+!     DSTART =  40446.5d0                  ! days (end Sept 2010)
+!     DSTART =  40907.0d0                  ! days (2012)
   TIDE_START =  -1.0d0                     ! days
     TIME_REF =  19000101.0d0               ! yyyymmdd.dd
 
@@ -666,14 +646,14 @@ Hout(idVair) == F       ! Vair               surface V-wind component
 Hout(idUairE) == F      ! Uwind_eastward     surface U-wind
 Hout(idVairN) == F      ! Vwind_northward    surface V-wind
 
-Hout(idTsur) == T T     ! shflux, ssflux     surface net heat and salt flux
-Hout(idLhea) == T       ! latent             latent heat flux
-Hout(idShea) == T       ! sensible           sensible heat flux
-Hout(idLrad) == T       ! lwrad              longwave radiation flux
-Hout(idSrad) == T       ! swrad              shortwave radiation flux
-Hout(idEmPf) == T       ! EminusP            E-P flux
-Hout(idevap) == T       ! evaporation        evaporation rate
-Hout(idrain) == T       ! rain               precipitation rate
+Hout(idTsur) == F F     ! shflux, ssflux     surface net heat and salt flux
+Hout(idLhea) == F       ! latent             latent heat flux
+Hout(idShea) == F       ! sensible           sensible heat flux
+Hout(idLrad) == F       ! lwrad              longwave radiation flux
+Hout(idSrad) == F       ! swrad              shortwave radiation flux
+Hout(idEmPf) == F       ! EminusP            E-P flux
+Hout(idevap) == F       ! evaporation        evaporation rate
+Hout(idrain) == F       ! rain               precipitation rate
 
 Hout(idDano) == F       ! rho                density anomaly
 Hout(idVvis) == F       ! AKv                vertical viscosity
@@ -800,33 +780,45 @@ Qout(idMtls) == F       ! gls                turbulent length scale
 ! Logical switches (TRUE/FALSE) to activate writing of fields into
 ! secondary Averages output file.
 
-Aout2(idUvel) == T       ! u                  3D U-velocity
-Aout2(idVvel) == T       ! v                  3D V-velocity
+Aout2(idUvel) == F       ! u                  3D U-velocity
+Aout2(idVvel) == F       ! v                  3D V-velocity
 Aout2(idu3dE) == T       ! u_eastward         3D U-eastward  at RHO-points
 Aout2(idv3dN) == T       ! v_northward        3D V-northward at RHO-points
-Aout2(idUbar) == T       ! ubar               2D U-velocity
-Aout2(idVbar) == T       ! vbar               2D V-velocity
+Aout2(idUbar) == F       ! ubar               2D U-velocity
+Aout2(idVbar) == F       ! vbar               2D V-velocity
 Aout2(idu2dE) == T       ! ubar_eastward      2D U-eastward  at RHO-points
 Aout2(idv2dN) == T       ! vbar_northward     2D V-northward at RHO-points
 Aout2(idFsur) == T       ! zeta               free-surface
 
 Aout2(idTvar) == T T     ! temp, salt         temperature and salinity
 
-Aout2(idUair) == T                          ! surface U-wind
-Aout2(idVair) == T                          ! surface V-wind
-Aout2(idUairE) == T      ! Uwind_eastward     surface U-wind
-Aout2(idVairN) == T      ! Vwind_northward    surface V-wind
 Aout2(idUsms) == T       ! sustr              surface U-stress
 Aout2(idVsms) == T       ! svstr              surface V-stress
+Aout2(idUbms) == F       ! bustr              bottom U-stress
+Aout2(idVbms) == F       ! bvstr              bottom V-stress
 
-Aout2(idTsur) == T T     ! shflux, ssflux     surface net heat and salt flux
-Aout2(idLhea) == T       ! latent             latent heat flux
-Aout2(idShea) == T       ! sensible           sensible heat flux
-Aout2(idLrad) == T       ! lwrad              longwave radiation flux
-Aout2(idSrad) == T       ! swrad              shortwave radiation flux
-Aout2(idEmPf) == F       ! EminusP            E-P flux
+Aout2(idPair) == T       ! Pair               surface air pressure
+Aout2(idUair) == F       ! Uair               surface U-wind component
+Aout2(idVair) == F       ! Vair               surface V-wind component
+Aout2(idUairE) == T      ! Uwind_eastward     surface U-wind
+Aout2(idVairN) == T      ! Vwind_northward    surface V-wind
+
+Aout2(idTsur) == F F     ! shflux, ssflux     surface net heat and salt flux
+Aout2(idLhea) == F       ! latent             latent heat flux
+Aout2(idShea) == F       ! sensible           sensible heat flux
+Aout2(idLrad) == F       ! lwrad              longwave radiation flux
+Aout2(idSrad) == F       ! swrad              shortwave radiation flux
 Aout2(idevap) == F       ! evaporation        evaporation rate
 Aout2(idrain) == F       ! rain               precipitation rate
+
+Aout2(idDano) == F       ! rho                density anomaly
+Aout2(idHsbl) == F       ! Hsbl               depth of surface boundary layer
+Aout2(idHbbl) == F       ! Hbbl               depth of bottom boundary layer
+
+Aout2(id2dPV) == F       ! pvorticity_bar     2D potential vorticity
+Aout2(id3dPV) == F       ! pvorticity         3D potential vorticity
+Aout2(id2dRV) == F       ! rvorticity_bar     2D relative vorticity
+Aout2(id3dRV) == F       ! rvorticity         3D relative vorticity
 
 ! Logical switches (TRUE/FALSE) to activate writing of extra inert passive
 ! tracers other than biological and sediment tracers. An inert passive tracer
@@ -898,10 +890,10 @@ Aout(idSdif) == F       ! AKs                vertical Salinity diffusion
 Aout(idHsbl) == T       ! Hsbl               depth of surface boundary layer
 Aout(idHbbl) == F       ! Hbbl               depth of bottom boundary layer
 
-Aout(id2dRV) == F       ! pvorticity_bar     2D relative vorticity
-Aout(id3dRV) == F       ! pvorticity         3D relative vorticity
-Aout(id2dPV) == F       ! rvorticity_bar     2D potential vorticity
-Aout(id3dPV) == F       ! rvorticity         3D potential vorticity
+Aout(id2dPV) == F       ! pvorticity_bar     2D potential vorticity
+Aout(id3dPV) == F       ! pvorticity         3D potential vorticity
+Aout(id2dRV) == T       ! rvorticity_bar     2D relative vorticity
+Aout(id3dRV) == T       ! rvorticity         3D relative vorticity
 
 Aout(idu3dD) == F       ! u_detided          detided 3D U-velocity
 Aout(idv3dD) == F       ! v_detided          detided 3D V-velocity
@@ -993,7 +985,7 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 ! Input NetCDF file names, [1:Ngrids].
 
      GRDNAME == /center1/AKWATERS/kshedstrom/Arctic2/Files/grid_Arctic_4.nc
-     ININAME == /center1/AKWATERS/kshedstrom/Arctic2/Files/ARCTIC4_IC_2010_09_27_SODA3.3.1.nc
+     ININAME == /center1/AKWATERS/kshedstrom/Arctic2/Files/ARCTIC4_IC_1980_01_08_SODA3.3.1.nc
 !    ININAME == arctic4_foo.nc
      ITLNAME == ocean_itl.nc
      IRPNAME == ocean_irp.nc
@@ -1014,12 +1006,14 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 ! except the last one.
 
    NCLMFILES == 1                         ! number of climate files
-     CLMNAME == /center1/AKWATERS/kshedstrom/Arctic2/Files/Arctic4_clm_2010_SODA3.3.1.nc |
-                /center1/AKWATERS/kshedstrom/Arctic2/Files/Arctic4_clm_2011_SODA3.3.1.nc
+     CLMNAME == /center1/AKWATERS/kshedstrom/Arctic2/Files/Arctic4_clm_1980_SODA3.3.1.nc |
+                /center1/AKWATERS/kshedstrom/Arctic2/Files/Arctic4_clm_1981_SODA3.3.1.nc |
+                /center1/AKWATERS/kshedstrom/Arctic2/Files/Arctic4_clm_1982_SODA3.3.1.nc
 
     NBCFILES == 1                          ! number of boundary files
-     BRYNAME == /center1/AKWATERS/kshedstrom/Arctic2/Files/Arctic4_bdry_2010_SODA3.3.1.nc |
-                /center1/AKWATERS/kshedstrom/Arctic2/Files/Arctic4_bdry_2011_SODA3.3.1.nc
+     BRYNAME == /center1/AKWATERS/kshedstrom/Arctic2/Files/Arctic4_bdry_1980_SODA3.3.1.nc |
+                /center1/AKWATERS/kshedstrom/Arctic2/Files/Arctic4_bdry_1981_SODA3.3.1.nc |
+                /center1/AKWATERS/kshedstrom/Arctic2/Files/Arctic4_bdry_1982_SODA3.3.1.nc
 
 ! Input climatology nudging coefficients file name.
 
@@ -1027,8 +1021,11 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 
 ! Input Sources/Sinks forcing (like river runoff) file name.
 
-     NSSFFILES == 1
-     SSFNAME == /center1/AKWATERS/kshedstrom/Arctic2/Files/Arctic4_rivers.nc
+    NSSFFILES == 2                          ! number of boundary files
+     SSFNAME == /center1/AKWATERS/kshedstrom/Arctic2/Files/JRA_Arctic_rivers_1980.nc |
+                /center1/AKWATERS/kshedstrom/Arctic2/Files/JRA_Arctic_rivers_1981.nc |
+                /center1/AKWATERS/kshedstrom/Arctic2/Files/JRA_Arctic_rivers_1982.nc \
+                /center1/AKWATERS/kshedstrom/Arctic2/Files/river_tracers.nc
 
 ! Input tidal forcing file name.
 
@@ -1052,29 +1049,38 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 ! continuation (\) or a vertical bar (|) symbol after each entry, except
 ! the last one.
 
-    NFFILES == 11                          ! number of forcing files
+    NFFILES == 10                          ! number of forcing files
 
-    FRCNAME ==  /center1/AKWATERS/kate/JRA55-do/slp.2010.18Aug2017.nc   |
-                /center1/AKWATERS/kate/JRA55-do/slp.2011.18Aug2017.nc   \
-               /center1/AKWATERS/kate/JRA55-do/q_10.2010.30Jun2016.nc   |
-               /center1/AKWATERS/kate/JRA55-do/q_10.2011.30Jun2016.nc   \
-               /center1/AKWATERS/kate/JRA55-do/t_10.2010.30Jun2016.nc   |
-               /center1/AKWATERS/kate/JRA55-do/t_10.2011.30Jun2016.nc   \
-               /center1/AKWATERS/kate/JRA55-do/rain.2010.15Dec2016.nc   |
-               /center1/AKWATERS/kate/JRA55-do/rain.2011.15Dec2016.nc   \
-               /center1/AKWATERS/kate/JRA55-do/snow.2010.15Dec2016.nc   |
-               /center1/AKWATERS/kate/JRA55-do/snow.2011.15Dec2016.nc   \
-               /center1/AKWATERS/kate/JRA55-do/rsds.2010.30Jun2016.nc  |
-               /center1/AKWATERS/kate/JRA55-do/rsds.2011.30Jun2016.nc  \
-               /center1/AKWATERS/kate/JRA55-do/rlds.2010.30Jun2016.nc  |
-               /center1/AKWATERS/kate/JRA55-do/rlds.2011.30Jun2016.nc  \
-               /center1/AKWATERS/kate/JRA55-do/u_10.2010.30Jun2016.nc  |
-               /center1/AKWATERS/kate/JRA55-do/u_10.2011.30Jun2016.nc  \
-               /center1/AKWATERS/kate/JRA55-do/v_10.2010.30Jun2016.nc  |
-               /center1/AKWATERS/kate/JRA55-do/v_10.2011.30Jun2016.nc  \
-               /center1/AKWATERS/kshedstrom/Arctic2/Files/runoff_ARCTIC4_daitren_southern_clim.nc \
+    FRCNAME ==  /center1/AKWATERS/kate/JRA55-do/slp.1980.18Aug2017.nc   |
+                /center1/AKWATERS/kate/JRA55-do/slp.1981.18Aug2017.nc   |
+                /center1/AKWATERS/kate/JRA55-do/slp.1982.18Aug2017.nc   \
+               /center1/AKWATERS/kate/JRA55-do/q_10.1980.30Jun2016.nc   |
+               /center1/AKWATERS/kate/JRA55-do/q_10.1981.30Jun2016.nc   |
+               /center1/AKWATERS/kate/JRA55-do/q_10.1982.30Jun2016.nc   \
+               /center1/AKWATERS/kate/JRA55-do/t_10.1980.30Jun2016.nc   |
+               /center1/AKWATERS/kate/JRA55-do/t_10.1981.30Jun2016.nc   |
+               /center1/AKWATERS/kate/JRA55-do/t_10.1982.30Jun2016.nc   \
+               /center1/AKWATERS/kate/JRA55-do/rain.1980.15Dec2016.nc   |
+               /center1/AKWATERS/kate/JRA55-do/rain.1981.15Dec2016.nc   |
+               /center1/AKWATERS/kate/JRA55-do/rain.1982.15Dec2016.nc   \
+               /center1/AKWATERS/kate/JRA55-do/snow.1980.15Dec2016.nc   |
+               /center1/AKWATERS/kate/JRA55-do/snow.1981.15Dec2016.nc   |
+               /center1/AKWATERS/kate/JRA55-do/snow.1982.15Dec2016.nc   \
+               /center1/AKWATERS/kate/JRA55-do/rsds.1980.30Jun2016.nc   |
+               /center1/AKWATERS/kate/JRA55-do/rsds.1981.30Jun2016.nc   |
+               /center1/AKWATERS/kate/JRA55-do/rsds.1982.30Jun2016.nc   \
+               /center1/AKWATERS/kate/JRA55-do/rlds.1980.30Jun2016.nc   |
+               /center1/AKWATERS/kate/JRA55-do/rlds.1981.30Jun2016.nc   |
+               /center1/AKWATERS/kate/JRA55-do/rlds.1982.30Jun2016.nc   \
+               /center1/AKWATERS/kate/JRA55-do/u_10.1980.30Jun2016.nc   |
+               /center1/AKWATERS/kate/JRA55-do/u_10.1981.30Jun2016.nc   |
+               /center1/AKWATERS/kate/JRA55-do/u_10.1982.30Jun2016.nc   \
+               /center1/AKWATERS/kate/JRA55-do/v_10.1980.30Jun2016.nc   |
+               /center1/AKWATERS/kate/JRA55-do/v_10.1981.30Jun2016.nc   |
+               /center1/AKWATERS/kate/JRA55-do/v_10.1982.30Jun2016.nc   \
                /center1/AKWATERS/kshedstrom/CORE2/sss_fill_2004.nc
 
+!              /center1/AKWATERS/kshedstrom/Arctic2/Files/runoff_ARCTIC4_daitren_southern_clim.nc \
 ! Output NetCDF file names, [1:Ngrids].
 
      DAINAME == arctic4_dai.nc
