--- a/Glacier_bay/ocean_glacier_bay.in
+++ b/Glacier_bay/ocean_glacier_bay.in
@@ -3,7 +3,7 @@
 !
 !svn $Id$
 !========================================================= Hernan G. Arango ===
-!  Copyright (c) 2002-2017 The ROMS/TOMS Group                                !
+!  Copyright (c) 2002-2019 The ROMS/TOMS Group                                !
 !    Licensed under a MIT/X style license                                     !
 !    See License_ROMS.txt                                                     !
 !==============================================================================
@@ -70,7 +70,7 @@
 
     MyAppCPP = GLACIER_BAY
 
-! Input variable information file name.  This file needs to be processed
+! Input variable information filename.  This file needs to be processed
 ! first so all information arrays can be initialized properly.
 
      VARNAME = /center1/AKWATERS/kshedstrom/NEP/External/varinfo.dat
@@ -206,6 +206,12 @@ ad_VolCons(north) ==  F                            ! northern boundary
 !          DT == 6.0d0
           DT == 5.0d0
      NDTFAST == 10
+
+! Number of timesteps for computing observation impacts during the
+! analysis-forecast cycle.
+
+  NTIMES_ANA == 1440                               ! analysis interval
+  NTIMES_FCT == 1440                               ! forecast interval
 
 ! Model iteration loops parameters.
 
@@ -872,7 +878,7 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
   NC_DEFLATE =  1                 ! if non-zero, turn on deflate filter
    NC_DLEVEL =  1                 ! deflate level [0-9]
 
-! Input NetCDF file names, [1:Ngrids].
+! Input NetCDF filenames, [1:Ngrids].
 
      GRDNAME == /center1/AKWATERS/kshedstrom/Glacier_bay/Files/Glacier_bay_grid_1.nc
      ININAME == /center1/AKWATERS/kshedstrom/Glacier_bay/Files/Glacier_bay_ic_2008-01-03.nc
@@ -883,13 +889,32 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
      FWDNAME == ocean_fwd.nc
      ADSNAME == ocean_ads.nc
 
+! Input adjoint forcing NetCDF filenames for computing observations
+! impacts during the analysis-forecast cycle. If the forecast error
+! metric is defined in state-space, then FOInameA and FOInameB should
+! be regular adjoint forcing files just like ADSname. If the forecast
+! error metric is defined in observation space (OBS_SPACE is activated)
+! then the forecast is initialized OIFnameA and OIFnameB (specified in
+! s4dva4.in input script) will have the structure of a 4D-Var observation
+! file.
+
+    FOInameA == roms_foi_a.nc
+    FOInameB == roms_foi_b.nc
+
+! Input NetCDF filenames for the forecasts initialized from the analysis
+! of the current 4D-Var cycle (FCTnameA) and initialized from the analysis
+! of the previous 4D-Var cycle (FCTnameB).
+
+    FCTnameA == roms_fct_a.nc
+    FCTnameB == roms_fct_b.nc
+
 ! Nesting grids connectivity data: contact points information. This
 ! NetCDF file is special and complex. It is currently generated using
 ! the script "matlab/grid/contact.m" from the Matlab repository.
 
      NGCNAME =  ocean_ngc.nc
 
-! Input lateral boundary conditions and climatology file names.  The
+! Input lateral boundary conditions and climatology filenames.  The
 ! USER has the option to split input data time records into several
 ! NetCDF files (see prologue instructions above). If so, use a single
 ! line per entry with a vertical bar (|) symbol after each entry,
@@ -901,22 +926,22 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
     NBCFILES == 1                          ! number of boundary files
      BRYNAME == /center1/AKWATERS/kshedstrom/Glacier_bay/Files/nwgoa_sta_GLACIER_BAY_bdry.nc
 
-! Input climatology nudging coefficients file name.
+! Input climatology nudging coefficients filename.
 
      NUDNAME == ocean_nud.nc
 
-! Input Sources/Sinks forcing (like river runoff) file name.
+! Input Sources/Sinks forcing (like river runoff) filename.
 
      NSSFFILES == 1
      SSFNAME == /center1/AKWATERS/kshedstrom/Glacier_bay/Files/Glacier_bay_rivers_2008_2009.nc
 
-! Input forcing NetCDF file name(s).  The USER has the option to enter
+! Input forcing NetCDF filename(s).  The USER has the option to enter
 ! several files names per each nested grid.  For example, the USER may
 ! have a different files for wind products, heat fluxes, rivers, tides,
 ! etc.  The model will scan the file list and will read the needed data
 ! from the first file in the list containing the forcing field. Therefore,
-! the order of the file names is very important.  If multiple forcing
-! files per grid, enter first all the file names for grid 1, then grid 2,
+! the order of the filenames is very important.  If multiple forcing
+! files per grid, enter first all the filenames for grid 1, then grid 2,
 ! and so on.  Use a single line per entry with a continuation (\) symbol
 ! at the each entry, except the last one.
 
@@ -943,7 +968,7 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
                /center1/AKWATERS/kate/MERRA_drowned/drowned_MERRA_lwrad_down_3hours_2009.nc  \
                /center1/AKWATERS/kshedstrom/CORE2/sss_fill_2004.nc
 
-! Output NetCDF file names, [1:Ngrids].
+! Output NetCDF filenames, [1:Ngrids].
 
      DAINAME == ocean_dai.nc
      GSTNAME == ocean_gst.nc
@@ -983,10 +1008,10 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 ! MyAppCPP     Application C-preprocessing option.
 !
 !------------------------------------------------------------------------------
-! Variable information file name (string with a maximum of 256 characters).
+! Variable information filename (string with a maximum of 256 characters).
 !------------------------------------------------------------------------------
 !
-! VARNAME      Input/Output variable information file name.  This file needs to
+! VARNAME      Input/Output variable information filename.  This file needs to
 !                be processed first so all information arrays and indices can
 !                be initialized properly in "mod_ncparam.F".
 !
@@ -1232,7 +1257,7 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 ! Time-Stepping parameters.
 !------------------------------------------------------------------------------
 !
-! NTIMES       Total number time-steps in current run.  If 3D configuration,
+! NTIMES       Total number of timesteps in current run.  If 3D configuration,
 !                NTIMES is the total of baroclinic time-steps.  If only 2D
 !                configuration, NTIMES is the total of barotropic time-steps.
 !
@@ -1243,6 +1268,14 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 ! NDTFAST      Number of barotropic time-steps between each baroclinic time
 !                step. If only 2D configuration, NDTFAST should be unity since
 !                there is no need to split time-stepping.
+!
+! NTIMES_ANA   Total number of timesteps for computing observations impacts
+!                interval during the analysis cycle. It is only used when
+!                W4DPSAS_FCT_SENSITIVITY is activated.
+!
+! NTIMES_FCT   Total number of timesteps for computing observations impacts
+!                interval during the forecast cycle. It is only used when
+!                W4DPSAS_FCT_SENSITIVITY is activated.
 !
 !------------------------------------------------------------------------------
 ! Model iteration loops parameters.
@@ -2526,30 +2559,48 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 !                between 0 and 9.
 !
 !------------------------------------------------------------------------------
-! Input/output NetCDF file names (string with a maximum of 256 characters).
+! Input/output NetCDF filenames (string with a maximum of 256 characters).
 !------------------------------------------------------------------------------
 !
-! Input file names:
+! Input filenames:
 !
-!  GRDNAME     Input grid file name.
+!  GRDNAME     Input grid filename.
 !
-!  ININAME     Input nonlinear initial conditions file name. It can be a
+!  ININAME     Input nonlinear initial conditions filename. It can be a
 !                re-start file.
 !
-!  ITLNAME     Input tangent linear model initial conditions file name.
+!  ITLNAME     Input tangent linear model initial conditions filename.
 !
-!  IRPNAME     Input representer model initial conditions file name.
+!  IRPNAME     Input representer model initial conditions filename.
 !
-!  IADNAME     Input adjoint model initial conditions file name.
+!  IADNAME     Input adjoint model initial conditions filename.
 !
-!  FWDNAME     Input forward solution fields file name.
+!  FWDNAME     Input forward solution fields filename.
 !
-!  ADSNAME     Input adjoint sensitivity functional file name.
+!  ADSNAME     Input adjoint sensitivity functional filename.
 !
+! Input adjoint forcing filenames for computing observations impacts
+! during the analysis-forecast cycle when W4DPSAS_FCT_SENSITIVITY is
+! activated.  The files FOInameA and FOInameB are used when the forecast
+! metric is defined in state-space (CPP option OBS_SPACE is off). Both
+! are regular adjoint forcing files just like ADSname.
+!
+! (See www.myroms.org/wiki/Analysis-Forecast_Cycle_Observation_Impacts)
+!
+!  FOInameA    Forecast initialized with 4D-Var analysis (red curve)
+!
+!  FOInameB    Forecast initialized with 4D_Var background (blue curve)
+!
+! Input NetCDF filenames for the forecasts initialized from the 4D-Var
+! analysis files:
+!
+!  FCTnameA    Current  4D-Var analysis cycle (red curve)
+!
+!  FCTnameB    Previous 4D-Var analysis cycle (blue curve)
 !
 ! Nesting grids connectivity data:
 !
-!  NGCNAME     Input nested grids contact points information file name. This
+!  NGCNAME     Input nested grids contact points information filename. This
 !                NetCDF file is currently generated using script:
 !
 !                matlab/grid/contact.m
@@ -2563,11 +2614,11 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 !                for more information.
 !
 !
-! Input lateral boundary conditions and climatology file names:
+! Input lateral boundary conditions and climatology filenames:
 !
-! BRYNAME      Input open boundary data file name(s) per nested grid.
+! BRYNAME      Input open boundary data filename(s) per nested grid.
 !
-! CLMNAME      Input climatology fields file name(s) per nested grid
+! CLMNAME      Input climatology fields filename(s) per nested grid
 !
 !  The USER has the option to split input data time records into several
 !  NetCDF files, as many as required. If so, use a single line per entry
@@ -2580,12 +2631,12 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 !               my_clm_year2.nc
 !
 !
-! Input nudging coefficients file name:
+! Input nudging coefficients filename:
 !
-! NUDNAME      Input nudging coefficients file name.
+! NUDNAME      Input nudging coefficients filename.
 !
 !
-! Input Sources/Sinks forcing file name:
+! Input Sources/Sinks forcing filename:
 !
 ! SSFNAME      River runoff data. This file is now separated from the
 !                regular forcing files to allow manipulations over nested
@@ -2606,19 +2657,29 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 !                be processed in ROMS because of the logical switches are
 !                FALSE the second grid.
 !
+! Input/output tidal forcing filename:
+!
+! TIDENAME     Tidal constituents period, phase, elevation, and current data.
+!                This data is needed when SSH_TIDES, UV_TIDES, or both are
+!                activated to force tides at the open boundaries. Currently,
+!                in nested applications, the tidal forcing is used in the
+!                coarser/larger grid (ng=1). If AVERAGES_DETIDE is activated,
+!                several least-squares time-accumulated harmonic variables
+!                are written into this NetCDF file to facilitate restart for
+!                during long fitting simulations.
 !
 ! Input forcing file(s) name:
 !
 ! NFFILES      Number of unique forcing files per nested grid.
 !
-! FRCNAME      Input forcing fields file name per nested grid.
+! FRCNAME      Input forcing fields filename per nested grid.
 !
-!  The USER has the option to enter several file names for forcing fields
+!  The USER has the option to enter several filenames for forcing fields
 !  and/or split input data time records for each nested grid. For example,
 !  the USER may have different files for wind products, heat fluxes, tides,
 !  etc.  The model will scan the file list and will read the needed data
 !  from the first file in the list containing the forcing field. Therefore,
-!  the order of the file names is very important. It is also possible to
+!  the order of the filenames is very important. It is also possible to
 !  split input data time records into several NetCDF files.
 !
 !  Use a single line per entry with a continuation (\) or vertical bar (|)
@@ -2641,29 +2702,29 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 !               my_Tair_year2.nc
 !
 !
-! Output file names:
+! Output filenames:
 !
 ! DAINAME      Output data assimilation next cycle initial conditions (4D-Var
-!                analysis) or restart (Ensemble Kalman Filter, EnKF) file name.
-! GSTNAME      Output GST analysis re-start file name.
-! RSTNAME      Output re-start file name.
-! HISNAME      Output history file name.
+!                analysis) or restart (Ensemble Kalman Filter, EnKF) filename.
+! GSTNAME      Output GST analysis re-start filename.
+! RSTNAME      Output re-start filename.
+! HISNAME      Output history filename.
 ! TLFNAME      Output impulse forcing for tangent linear (TLM and RPM) models.
-! TLMNAME      Output tangent linear file name.
-! ADJNAME      Output adjoint file name.
-! AVGNAME      Output averages file name.
-! DIANAME      Output diagnostics file name.
-! STANAME      Output stations file name.
-! FLTNAME      Output floats file name.
+! TLMNAME      Output tangent linear filename.
+! ADJNAME      Output adjoint filename.
+! AVGNAME      Output averages filename.
+! DIANAME      Output diagnostics filename.
+! STANAME      Output stations filename.
+! FLTNAME      Output floats filename.
 !
 !------------------------------------------------------------------------------
-! Input ASCII parameters file names.
+! Input ASCII parameters filenames.
 !------------------------------------------------------------------------------
 !
-! APARNAM      Input assimilation parameters file name.
-! SPOSNAM      Input stations positions file name.
-! FPOSNAM      Input initial drifters positions file name.
-! BPARNAM      Input biological parameters file name.
-! SPARNAM      Input sediment transport parameters file name.
-! USRNAME      USER's input generic file name.
+! APARNAM      Input assimilation parameters filename.
+! SPOSNAM      Input stations positions filename.
+! FPOSNAM      Input initial drifters positions filename.
+! BPARNAM      Input biological parameters filename.
+! SPARNAM      Input sediment transport parameters filename.
+! USRNAME      USER's input generic filename.
 !
