Fix spelling (from ticket 819)

--- a/CORAL/ocean_CORAL.in
+++ b/CORAL/ocean_CORAL.in
@@ -948,7 +948,7 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 ! be regular adjoint forcing files just like ADSname. If the forecast
 ! error metric is defined in observation space (OBS_SPACE is activated)
 ! then the forecast is initialized OIFnameA and OIFnameB (specified in
-! s4dva4.in input script) will have the structure of a 4D-Var observation
+! s4dvar.in input script) will have the structure of a 4D-Var observation
 ! file.
 
     FOInameA == roms_foi_a.nc
